Fixing image gallery image stretch.

--- a/src/applications/public-outreach-materials/sass/public-outreach-materials.scss
+++ b/src/applications/public-outreach-materials/sass/public-outreach-materials.scss
@@ -57,6 +57,7 @@ $formation-image-path: "~@department-of-veterans-affairs/formation/assets/img";
         display: block;
         width: 100%;
         height: 100%;
+        object-fit: cover;
       }
     }
     .asset-body-wrap {
